# Dockerfiles

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
Flex/: CMakeLists.txt  README.md
QAT/: CMakeLists.txt  README.md
SG1/: CMakeLists.txt  README.md
SG2/: CMakeLists.txt  README.md
VCA2/: CMakeLists.txt  README.md
VCAC-A/: CMakeLists.txt  README.md
Xeon/: CMakeLists.txt  README.md
XeonE3/: CMakeLists.txt  README.md
doc/: cmake.md  docker.md  ffmpeg.md  gst.md  helloworld_gst.md  nginx.md  ospray+OpenImageIO+mpi.md  ospray-mpi.md  ospray.md  owt-immersive.md  owt.md  svt.md  test.md
sample/: Dockerfile  README.md  main.cpp
script/: .generate_readme.py.swp  build.sh  dldt-ffmpeg-tests.cmake  dldt-gst-tests.cmake  dldt-tests.cmake  ffmpeg-tests.cmake  generate_readme.py  gst-tests.cmake  image.cmake  imtl-tests.cmake  mss-tests.cmake  nginx-tests.cmake  os.cmake  ospray-tests.cmake  owt-tests.cmake  platform.cmake  qat-tests.cmake  qatbuild.sh  qatshell.sh  run_hadolint.sh  shell.sh  srs-tests.cmake  svt-tests.cmake  travis_build.sh  update-dockerhub-readme.sh  update-imagelist.sh  upload-dockerhub-readme.sh  usage.cmake
template/: OpenImageIO.m4  automake.m4  build-tools-hddl-layer.m4  build-tools-hddl.m4  build-tools.m4  cleanup.m4  cmake.m4  dav1d.m4  dldt-ie.m4  embree.m4  ffmpeg-n4.1.m4  ffmpeg.m4  ffmpeg.owt.m4  gmmlib.m4  gst-orc.m4  gst-plugin-bad.m4  gst-plugin-base.m4  gst-plugin-good.m4  gst-plugin-gva.m4  gst-plugin-libav.m4  gst-plugin-svt.m4  gst-plugin-ugly.m4  gst-plugin-vaapi.m4  gst-python.m4  gst.m4  gstreamer-videoanalytics.m4  install.m4  (+61 more)
(+2372 files in other folders)
